--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <title>영어 학습 사이트</title>
     <meta name="description" content="재미있게 배우는 영어">
-    <link rel="stylesheet" href="/index/css/index.css" />
+    <link rel="stylesheet" href="index/css/index.css" />
   </head>
   <body>
     <main class="index">
       <header class="index-header">
         <h1 class="visually-hidden">English Learning</h1>
-        <img class="index-title" src="/index/img/english_artboard_fit_white_text.png" alt="English Learning 로고">
+        <img class="index-title" src="index/img/english_artboard_fit_white_text.png" alt="English Learning 로고">
       </header>
       <nav class="index-nav">
         <a href="/word/word.html" class="card card-word" aria-label="단어 학습 페이지로 이동">
