--- a/word-lv1/word-lv1.html
+++ b/word-lv1/word-lv1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>영어 단어 학습 - Level 1</title>
     <meta name="description" content="레벨 1 영어 단어 학습">
-    <link rel="stylesheet" href="css/word-lv1.css">
-    <link rel="stylesheet" href="css/pop-up.css">
+    <link rel="stylesheet" href="../communal/css/word-lv-page.css">
+    <link rel="stylesheet" href="../communal/css/pop-up.css">
 </head>
 <body>
     <main class="word-page">
@@ -19,14 +19,14 @@
             <!-- JavaScript로 자동 생성 (매번 랜덤 40개) -->
         </section>
 
-        <!-- 팝업 창 -->
+        <!-- 팝업 -->
         <div class="popup-overlay" id="popupOverlay">
             <div class="popup" id="popup">
-                <h2 class="popup-word" id="popupWord">measure</h2>
-                <p class="popup-meaning" id="popupMeaning">1. 측정하다 2. 조치</p>
+                <h2 class="popup-word" id="popupWord"></h2>
+                <p class="popup-meaning" id="popupMeaning"></p>
                 <p class="popup-pronunciation" id="popupPronunciation">
-                    <span class="pronunciation-symbol">meʒə(r)</span>
-                    <span class="pronunciation-korean">메저</span>
+                    <span class="pronunciation-symbol"></span>
+                    <span class="pronunciation-korean"></span>
                 </p>
                 <div class="popup-derivatives" id="popupDerivatives"></div>
             </div>
