--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="index-title" src="./index/img/english_artboard_fit_white_text.png" alt="English Learning 로고">
       </header>
       <nav class="index-nav">
-        <a href="/word/word.html" class="card card-word" aria-label="단어 학습 페이지로 이동">
+        <a href="./word/word.html" class="card card-word" aria-label="단어 학습 페이지로 이동">
           <span class="card-text">단어</span>
         </a>
         <a href="grammar.html" class="card card-grammar" aria-label="문법 학습 페이지로 이동">
@@ -31,7 +31,7 @@
                         <li>프로젝트 코드</li>
                     </ul>
                 <span class="git">GitHub 저장소 이동</span>
-                <img src="img/github.png" alt="github 아이콘">
+                <img src="./index/img/github.png" alt="github 아이콘">
             </div>
 
             <div class="skill-card">
