--- a/word-lv2/word-lv2.html
+++ b/word-lv2/word-lv2.html
@@ -11,7 +11,7 @@
 
     <body>  
         <header class="word-header">
-            <h1 class="level-title">Lv 2</h1>
+            <img class="level-title" src="img/lv2.png">
         </header>
 
         <main class="word-page">
