--- a/word/word.html
+++ b/word/word.html
@@ -21,7 +21,7 @@
             <a href="../word-lv2/word-lv2.html" class="level-card level-2" aria-label="레벨 2단어 학습 시작">
               <sapn class="levle-text">Lv2</sapn>
             </a>
-            <a href="word-lv3.html" class="level-card level-3" aria-label="레벨 3단어 학습 시작">
+            <a href="../word-lv3/word-lv3.html" class="level-card level-3" aria-label="레벨 3단어 학습 시작">
               <sapn class="levle-text">Lv3</sapn>
             </a>
           </nav>
