영어 단어의 메인 페이지(메뉴화면)

--- a/word/word.html
+++ b/word/word.html
@@ -16,13 +16,13 @@
           <h2 class="visually-hidden">난이도 선택</h2>
           <nav class="level-nav">
             <a href="../word-lv1/word-lv1.html" class="level-card level-1" aria-label="레벨 1단어 학습 시작">
-              <sapn class="levle-text">Lv1</sapn>
+              <span class="levle-text">Lv1</span>
             </a>
             <a href="../word-lv2/word-lv2.html" class="level-card level-2" aria-label="레벨 2단어 학습 시작">
-              <sapn class="levle-text">Lv2</sapn>
+              <span class="levle-text">Lv2</span>
             </a>
             <a href="../word-lv3/word-lv3.html" class="level-card level-3" aria-label="레벨 3단어 학습 시작">
-              <sapn class="levle-text">Lv3</sapn>
+              <span class="levle-text">Lv3</span>
             </a>
           </nav>
         </section>
