영어 메인 페이지

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li>프로젝트 코드</li>
                     </ul>
                 <span class="git">GitHub 저장소 이동</span>
-                <img src="../index/img/github.png" alt="github 아이콘">
+                <img src="./index/img/github.png" alt="github 아이콘">
             </div>
 
             <div class="skill-card">
