--- a/word/word-lv2/word-lv2.html
+++ b/word/word-lv2/word-lv2.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="레벨 2 영어 단어 학습">
         <title>영어 단어 학습 - Level 2</title>
-        <link rel="stylesheet" href="../communal/css/word-lv-page.css">
-        <link rel="stylesheet" href="../communal/css/pop-up.css">
+        <link rel="stylesheet" href="../word/css/word-lv-page.css">
+        <link rel="stylesheet" href="../word/css/pop-up.css">
     </head>
 
     <body>  
@@ -32,4 +32,5 @@
         </main>
         <script src="js/word-lv2.js"></script>
     </body>
+
 </html>
