영어 단어 2 레벨

--- a/word/word-lv2/word-lv2.html
+++ b/word/word-lv2/word-lv2.html
@@ -6,7 +6,7 @@
         <meta name="description" content="레벨 2 영어 단어 학습">
         <title>영어 단어 학습 - Level 2</title>
         <link rel="stylesheet" href="../word/css/word-lv-page.css">
-        <link rel="stylesheet" href="../word/css/pop-up.css">
+        <link rel="stylesheet" href="../word/css/word-popup.css">
     </head>
 
     <body>  
@@ -34,3 +34,4 @@
     </body>
 
 </html>
+
