--- a/word/word-lv1/word-lv1.html
+++ b/word/word-lv1/word-lv1.html
@@ -6,7 +6,7 @@
     <title>영어 단어 학습 - Level 1</title>
     <meta name="description" content="레벨 1 영어 단어 학습">
     <link rel="stylesheet" href="../word/css/word-lv-page.css">
-    <link rel="stylesheet" href="../word/css/pop-up.css">
+    <link rel="stylesheet" href="../word/css/word-popup.css">
 </head>
 <body>
     <main class="word-page">
