--- a/word/word-lv3/word-lv3.html
+++ b/word/word-lv3/word-lv3.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="레벨 3 영어 단어 학습">
         <title>영어 단어 학습 - Level 3</title>
-        <link rel="stylesheet" href="../word/css/word-lv-page.css">
-        <link rel="stylesheet" href="../word/css/word-popup.css">
+        <link rel="stylesheet" href="../css/word-lv-page.css">
+        <link rel="stylesheet" href="../css/word-popup.css">  
     </head>
 
     <body>
@@ -35,3 +35,4 @@
     </body>
 
 </html>
+
