영어 문장 레벨 메뉴 페이지

--- a/sentence/sentence.html
+++ b/sentence/sentence.html
@@ -15,13 +15,13 @@
         <section class="level-section">
           <h2 class="visually-hidden">난이도 선택</h2>
           <nav class="level-nav">
-            <a href="../sentence-lv1/sentence-lv1.html" class="level-card level-1" aria-label="레벨 1 문장 학습 시작">
+            <a href="sentence-lv1/sentence-lv1.html" class="level-card level-1" aria-label="레벨 1 문장 학습 시작">
               <span class="levle-text">Lv1</span>
             </a>
-            <a href="../sentence-lv2/sentence-lv2.html" class="level-card level-2" aria-label="레벨 2 문장 학습 시작">
+            <a href="sentence-lv2/sentence-lv2.html" class="level-card level-2" aria-label="레벨 2 문장 학습 시작">
               <span class="levle-text">Lv2</span>
             </a>
-            <a href="../sentence-lv3/sentence-lv3.html" class="level-card level-3" aria-label="레벨 3 문장 학습 시작">
+            <a href="sentence-lv3/sentence-lv3.html" class="level-card level-3" aria-label="레벨 3 문장 학습 시작">
               <span class="levle-text">Lv3</span>
             </a>
           </nav>
