--- a/sentence/sentence-lv1/sentence-lv1.html
+++ b/sentence/sentence-lv1/sentence-lv1.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>영어 문장 레벨 1</title>
-    <link rel="stylesheet" href="/sentence/css/sentence-lv.css">
-    <link rel="stylesheet" href="/sentence/css/setence-popup.css">
+    <link rel="stylesheet" href="../css/sentence-lv.css">
+    <link rel="stylesheet" href="../css/sentence-lv.css">
 </head>
 
 <body>
