영어 문장 1 레벨 페이지

--- a/sentence/sentence-lv1/sentence-lv1.html
+++ b/sentence/sentence-lv1/sentence-lv1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>영어 문장 레벨 1</title>
     <link rel="stylesheet" href="../css/sentence-lv.css">
-    <link rel="stylesheet" href="../css/sentence-lv.css">
+    <link rel="stylesheet" href="../css/setence-popup.css">
 </head>
 
 <body>
